--- a/capacitor.config.json
+++ b/capacitor.config.json
@@ -1,5 +1,5 @@
 {
-  "appId": "io.ionic.starter",
+  "appId": "io.ionic.new",
   "appName": "noticias",
   "bundledWebRuntime": false,
   "npmClient": "npm",
