--- a/package.json
+++ b/package.json
@@ -23,10 +23,15 @@
     "@capacitor/core": "2.4.6",
     "@ionic-native/core": "^5.0.0",
     "@ionic-native/in-app-browser": "^5.30.0",
+    "@ionic-native/social-sharing": "^5.31.1",
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^5.0.0",
+    "@ionic/storage": "^2.3.1",
     "cordova-plugin-inappbrowser": "^4.1.0",
+    "cordova-plugin-x-socialsharing": "^6.0.3",
+    "cordova-sqlite-storage": "^5.1.0",
+    "es6-promise-plugin": "^4.2.2",
     "rxjs": "~6.5.5",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.3"
